# monorepo

./: .build.yml  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  boxpub.cabal  build.sh  default.nix  download.py  ebooklib.nix  flake.nix  generic.nix  go.mod  go.sum  hie-wrapper.sh  main.go  nixops.nix  nixpkgs.json  nixpkgs.nix  package.json  pyproject.toml  release.nix  shell.nix  tailscale.go  tsconfig.json
.devcontainer/: devcontainer.json
.github/workflows/: test.yml
app/: package.json  pnpm-lock.yaml
autodiff/: Cargo.toml
autodiff/src/: backprop.rs  lib.rs
cmd/receptionist/: main.go
data/: sanitize.lua  stylesheet.css
dotfiles/: .Xresources  .bashrc  .gtkrc-2.0  .vimrc  .zshrc  README.md  compton.conf  i3exit  i3exit.service  i3lock.service  xflock4
dotfiles/.bspwm/: bspwmrc  config.ini  sxhkdrc  weather_icons
dotfiles/.config/: compton.conf
dotfiles/.xmonad/: .distro.conkyrc  .workspace.xmobarrc  xmobarrc  xmonad.hs
dotfiles/Desktop/: jeanne-d-arc.jpg.REMOVED.git-id  plasma-5-10-cascade.png.REMOVED.git-id
dotfiles/conky/: .shortcuts.conkyrc  .theme.conkyrc  init-conky
dotfiles/etc/: dhcpcd.conf  oblogout.conf
dotfiles/i3/: config
dotfiles/i3status/: config
dotfiles/vis/: config
dtensor/: Cargo.toml
dtensor/src/: lib.rs
filemanager/: Cargo.toml
filemanager/src/: lib.rs
files/: default.pa  pacman.conf
macOS/: bluetooth.1-0-0.md  encrypted.lvm.md  extra.1-0-0.md  graphical-environment.1-0-0.md  ntp.1-0-0.md  post_install.1-0-0.md  standard.1-0-0.md  standard.md
macOS/macOS.extra.1-0-0/: README.md
nix/: default.nix  gitignore.nix  haskell.nix  nixpkgs.nix  pkgs.nix  sources.nix
nix/.plan.nix/: boxpub.nix
nix/overlays/: rust.nix
nix/spec/: gitignore.json  haskell.json  nixpkgs.json
nn/: Cargo.toml
nn/src/: onnx.rs
nn/src/onnx/: attributes.rs  data_type.rs
nn/src/onnx/runtime/: v21.rs
pkg_lists/: atom.txt  pacman.txt
public/Molecule/: .gitignore  .tern-project  package.json
public/Molecule-AniList/: .babelrc
public/arch-x-os/: README.md
public/boxpub/: .build.yml  Cargo.toml  boxpub.cabal  build.sh  default.nix  hie-wrapper.sh  nixpkgs.json  nixpkgs.nix  release.nix  shell.nix  update-nixpkgs.sh
public/boxpub/.github/workflows/: test.yml
public/boxpub/data/: sanitize.lua  strip-attrs.lua  stylesheet.css
public/boxpub/nix/: default.nix  expand-derivation-attrs.patch  gitignore.nix  haskell.nix
public/boxpub/nix/.plan.nix/: boxpub.nix
public/boxpub/nix/patches/: fix-cross-compilation.patch
public/boxpub/nix/spec/: haskell.json
public/boxpub/src/: FileSystem.hs  Main.hs  Options.hs
public/boxpub/src/Boxpub/: Client.hs  EPUB.hs  FileSystem.hs  Handler.hs  Options.hs
public/boxpub/src/Boxpub/Client/: Env.hs  FileSystem.hs  Handler.hs  Options.hs  Parser.hs  Provider.hs
public/boxpub/src/Boxpub/Client/Provider/: BoxNovel.hs  NovelPlanet.hs  WuxiaWorld.hs
public/boxpub/src/Boxpub/EPUB/: FileSystem.hs  Filters.hs  Metadata.hs
public/dtensor/dtensor/public/nn/: Cargo.toml
public/dtensor/dtensor/public/nn/src/: onnx.rs
public/dtensor/dtensor/public/nn/src/onnx/: bytes_parser.rs  model.rs  runtime.rs
public/dtensor/dtensor/public/nn/src/onnx/runtime/: interface.rs  v21.rs
public/dtensor/dtensor/public/runtime/: Cargo.toml
public/dtensor/dtensor/public/runtime/src/: lib.rs  webgpu.rs
public/dtensor/dtensor/public/runtime/src/webgpu/: benchmark.rs  generators.rs  pipeline.rs  tensor.rs  utils.rs
public/dtensor/dtensor/public/runtime/src/webgpu/generators/: binary.rs  index.rs  reduce.rs  unary.rs  view.rs
public/dtensor/dtensor/public/runtime/src/webgpu/utils/: spirv.rs
public/dtensor/dtensor/public/tensor/: Cargo.toml  build.rs
public/dtensor/dtensor/public/tensor/src/: lib.rs  topograph.rs
public/dtensor/dtensor/public/tensor/src/ir/: mlir.rs
public/dtensor/dtensor/public/tensor/src/ir/mlir/: shader.rs
public/dtensor/dtensor/public/tensor/src/primitives/: tensor.rs  tensorview.rs
public/dtensor/dtensor/public/tensor/src/primitives/tensor/: loaders.rs  ops.rs  tensor.rs  tensortype.rs  view.rs
public/dtensor/dtensor/public/tensor/src/primitives/tensor/loaders/: arange.rs  range.rs  raw.rs  safetensor.rs  scalar.rs
public/dtensor/dtensor/public/tensor/src/primitives/tensor/ops/: binary.rs  load.rs  reduce.rs  unary.rs  view.rs
public/dtensor/dtensor/public/tensor/src/primitives/tensor/ops/derived/: hlops.rs  mlops.rs
public/dtensor/dtensor/public/tensor/src/primitives/tensor/view/: passthrough.rs
public/dtensor/dtensor/public/tensor/src/primitives/tensorview/: tracker.rs  view.rs
public/tailscale-rpz/: go.mod  go.sum  main.go  (+2 more)
resources/: mirrorlist.md  netctl.md  post_install.md
runtime/: Cargo.toml
runtime/src/: lib.rs  webgpu.rs
runtime/src/webgpu/: generators.rs  pipeline.rs  tensor.rs
runtime/src/webgpu/generators/: binary.rs  index.rs  reduce.rs  unary.rs  view.rs
scheduler/mercenary/: Cargo.toml
scheduler/mercenary/src/: main.rs  mercenary.rs
scripts/: backup.bash  base_install.bash  build.sh  chroot.bash  default.pa.patch  encrypted.bash  install.bash  pacman.conf.patch  post-install.sh  post.bash  setup.bash
src/: Main.hs  Parser.rs  README.md  dtensor.rs  index.jsx  index.less  index.pug  lib.rs  main.rs
tensor/: Cargo.toml  c.c  cpp.cpp  hs.hs
tensor/src/: lib.rs  primitives.rs  topograph.rs
tensor/src/ir/: mlir.rs
tensor/src/ir/mlir/: generators.rs  shader.rs
tensor/src/ir/mlir/generators/: wgsl.rs
tensor/src/primitives/: tensor.rs  tensorview.rs
tensor/src/primitives/tensor/: graph.rs  loaders.rs  ops.rs  tensor.rs  tensortype.rs  view.rs
tensor/src/primitives/tensor/loaders/: arange.rs  internal.rs  range.rs  safetensor.rs  scalar.rs
tensor/src/primitives/tensor/ops/: binary.rs  derived.rs  index.rs  load.rs  reduce.rs  unary.rs  view.rs
tensor/src/primitives/tensor/ops/derived/: hlops.rs  mlops.rs
tensor/src/primitives/tensorview/: passthrough.rs  tracker.rs  view.rs
tensor/tests/: ops.rs
tensor/tests/common/: mod.rs
webgpu/: Cargo.toml
webgpu_bin/: Cargo.toml
webgpu_bin/src/: main.rs
(+233 files in other folders)
