[package]
name = "dtensor"
version = "0.1.0"
edition = "2021"

[lib]
name = "dtensor"
path = "src/lib.rs"

[dependencies]
bytemuck = { version = "1.13.1", features = ["derive"] }
env_logger = "0.10.0"
futures = "0.3.28"
futures-intrusive = "0.5.0"
impl_ops = "0.1.1"
itertools = "0.10.5"
pollster = "0.3.0"
wgpu = "0.16.0"
