cabal-version:       2.4

name:                 boxpub
version:              1.1.0.0
synopsis:             boxnovel epub generator
license:              BSD-3-Clause
license-file:         LICENSE
author:               Edmund Wu
maintainer:           edmund.wu@protonmail.com

homepage:             https://git.sr.ht/~eadwu/boxpub
bug-reports:          https://todo.sr.ht/~eadwu/boxpub

data-dir:             data
data-files:           stylesheet.css
                    , Lato/*.ttf
                    , Lato/OFL.txt

source-repository head
  type:               git
  location:           https://git.sr.ht/~eadwu/boxpub

executable boxpub
  main-is:            Main.hs
  ghc-options:        -threaded
                      -rtsopts
                      -with-rtsopts=-N
  build-depends:      zip ^>=1.2.0
                    , base ^>=4.12.0.0
                    , text ^>=1.2.3.1
                    , uuid ^>=1.3.13
                    , scalpel ^>=0.6.0
                    , tagsoup ^>=0.14.7
                    , filepath ^>=1.4.2.1
                    , directory ^>=1.3.3.0
                    , bytestring ^>=0.10.8.2
                    , http-client ^>=0.5.14
                    , data-default ^>=0.7.1.1
                    , http-client-tls ^>=0.3.5.3
                    , optparse-applicative ^>=0.14.2.0
  other-modules:      Paths_boxpub
                    , Boxpub.Client
                    , Boxpub.Client.Env
                    , Boxpub.Client.Parser
                    , Boxpub.Client.Provider
                    , Boxpub.Client.Provider.BoxNovel
                    , Boxpub.EPUB
                    , Boxpub.EPUB.Chapter
                    , Boxpub.EPUB.Constants
                    -- , Boxpub.EPUB.Content
                    , Boxpub.EPUB.Cover
                    , Boxpub.EPUB.Fonts
                    , Boxpub.EPUB.MetaInf
                    , Boxpub.EPUB.MimeType
                    , Boxpub.EPUB.Nav
                    , Boxpub.EPUB.Styles
                    , Boxpub.EPUB.Toc
                    , Boxpub.Internal.FileSystem
  hs-source-dirs:     src
  default-language:   Haskell2010
  default-extensions: OverloadedStrings
