[tool.poetry]
name = "dtensor"
version = "0.1.0"
description = ""
authors = ["Edmund Wu <fangkazuto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
einops = "^0.6.1"
sentencepiece = "^0.1.99"
torch = "^2.0.0"
transformers = "^4.28.1"
accelerate = "^0.18.0"
bitsandbytes = "^0.38.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
