[package]
name = "dtensor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nn = { version = "0.1.0", path = "../nn" }
runtime = { version = "0.1.0", path = "../runtime" }
tensor = { version = "0.1.0", path = "../tensor" }
