[package]
name = "tensor"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
bytemuck = "1.13.1"
filemanager = { version = "0.1.0", path = "../filemanager" }
itertools = "0.11.0"
num-traits = "0.2.16"
once_cell = "1.18.0"
serde = "1.0.185"
uuid = { version = "1.4.1", features = ["v4"] }
