[package]
name = "tensor"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
bytemuck = "1.13.1"
filemanager = { version = "0.1.0", path = "../filemanager" }
half = "2.3.1"
itertools = "0.11.0"
num-traits = "0.2.16"
once_cell = "1.18.0"
prost = "0.12.0"
safetensors = "0.3.3"
serde = { version = "1.0.185", features = ["derive"] }
uuid = { version = "1.4.1", features = ["v4"] }

[build-dependencies]
prost-build = { version = "0.12.0" }
