[package]
name = "webgpu_bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
tokio = { version = "1.29.1", features = ["sync", "macros", "rt"] }
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
wasmtime = "10.0.1"
wgpu = "0.16.2"
