cabal-version:       2.4

name:                boxpub
version:             0.1.0.0
synopsis:            boxnovel epub generator
license:             BSD-3-Clause
license-file:        LICENSE
author:              Edmund Wu
maintainer:          edmund.wu@protonmail.com

homepage:            https://git.sr.ht/~eadwu/boxpub
bug-reports:         https://todo.sr.ht/~eadwu/boxpub

source-repository head
  type:              git
  location:          https://git.sr.ht/~eadwu/boxpub

executable boxpub
  main-is:           Main.hs
  build-depends:     base ^>=4.12.0.0
                   , pandoc ^>=2.7.1
                   , scalpel ^>=0.6.0
                   , http-client ^>=0.5.14
                   , http-client-tls ^>=0.3.5.3
                   , optparse-applicative ^>=0.14.2.0
  other-modules:     Paths_boxpub
                   , Boxpub.Client
                   , Boxpub.Client.Env
                   , Boxpub.Client.Parser
                   , Boxpub.Client.Provider
                   , Boxpub.Client.Provider.BoxNovel
                   , Boxpub.Internal.Helpers
  hs-source-dirs:    src
  default-language:  Haskell2010
