cabal-version:       2.4

name:                boxpub
version:             0.1.0.0
synopsis:            boxnovel epub generator
license:             BSD-3-Clause
license-file:        LICENSE
author:              Edmund Wu
maintainer:          edmund.wu@protonmail.com

homepage:            https://git.sr.ht/~eadwu/boxpub
bug-reports:         https://todo.sr.ht/~eadwu/boxpub

source-repository head
  type:              git
  location:          https://git.sr.ht/~eadwu/boxpub

executable boxpub
  main-is:           Main.hs
  extensions:        OverloadedStrings
  build-depends:     base ^>=4.12.0.0
                   , text ^>=1.2.3.1
                   , pandoc ^>=2.7.1
                   , scalpel ^>=0.6.0
                   , filepath ^>=1.4.2.1
                   , directory ^>=1.3.3.0
                   , bytestring ^>=0.10.8.2
                   , http-client ^>=0.5.14
                   , data-default ^>=0.7.1.1
                   , http-client-tls ^>=0.3.5.3
                   , optparse-applicative ^>=0.14.2.0
  other-modules:     Paths_boxpub
                   , Boxpub.Client
                   , Boxpub.Client.Env
                   , Boxpub.Client.Parser
                   , Boxpub.Client.Provider
                   , Boxpub.Client.Provider.BoxNovel
                   , Boxpub.EPUB
                   , Boxpub.EPUB.Metadata
                   , Boxpub.Internal.FileSystem
  hs-source-dirs:    src
  default-language:  Haskell2010
