[package]
name = "mercenary"
version = "0.1.0"
edition = "2021"

[dependencies]
async-nats = "0.33.0"
clap = { version = "4.5.2", features = ["derive"] }
futures-util = "0.3.30"
guild = { version = "0.1.0", path = "../guild" }
prost = "0.12.3"
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["time", "fmt", "ansi", "json"] }
uuid = { version = "1.7.0", features = ["v4"] }
