[package]
name = "nn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.15.0"
filemanager = { version = "0.1.0", path = "../filemanager" }
half = "2.4.0"
hex = "0.4.3"
prost = "0.12.3"
sha1 = "0.10.6"

[build-dependencies]
prost-build = "0.12.3"
