[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.13.1"
futures-intrusive = "0.5.0"
num = "0.4.1"
tensor = { version = "0.1.0", path = "../tensor" }
wgpu = "0.18.0"
