[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.14.0"
futures-intrusive = "0.5.0"
naga = { version = "0.14.2", features = ["wgsl-in", "spv-out", "compact", "spv-in", "wgsl-out"] }
num = "0.4.1"
spirv-tools = "0.9.0"
tensor = { version = "0.1.0", path = "../tensor" }
wgpu = { version = "0.18.0", features = ["spirv"] }

[features]
wgpu_direct_buffer = []
wgpu_benchmark = []
dtensor_shader_stitch = []
dtensor_spirv_passthrough = []
dtensor_spirv_passthrough_f16 = []

