[package]
name = "tensor"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1.14.0"
filemanager = { version = "0.1.0", path = "../filemanager" }
half = "2.3.1"
itertools = "0.11.0"
num-traits = "0.2.17"
once_cell = "1.18.0"
rand = "0.8.5"
rand_distr = "0.4.3"
safetensors = "0.4.0"
uuid = { version = "1.5.0", features = ["v4"] }
