[package]
name = "tensor"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1.15.0"
filemanager = { version = "0.1.0", path = "../filemanager" }
half = "2.4.0"
itertools = "0.12.1"
once_cell = "1.19.0"
rand = "0.8.5"
rand_distr = "0.4.3"
safetensors = "0.4.2"

[dev-dependencies]
dtensor = { path = "../dtensor" }
tokio = "1.37.0"
wgpu = "0.19.3"
